...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            tools:context=".recyclerviewScreens.addSlotDialog.AddSlotDialogFragment">

            <ru.ifr0z.timepickercompact.TimePickerCompact
                android:id="@+id/tpAppointmentTime"
                style="@style/Widget.TimeDurationPicker.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
...
                android:text="@string/appointment_time"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_big"
                android:visibility="@{viewModel.isFixedSlot ?View.VISIBLE:View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addSlotDuration" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/addSlotDuration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
...
                android:text="@string/duration"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etIdentifierAddDialog" />

            <TextView
                android:id="@+id/tvIdentifierAddDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIdentifierAddDialog" />

            <CheckBox
                android:id="@+id/cbIsFixedSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isFixedSlot}"
                android:text="@string/fixed_slot"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_small"
...
