...
                android:foregroundGravity="center_vertical|center|center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMode">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sMode"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="right|center_horizontal|center_vertical"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    app:layout_constraintEnd_toStartOf="@+id/sMode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <android.widget.Button
                android:id="@+id/btnSave"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/configPrioDuration" />

            <TextView
                android:id="@+id/tvMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
...
                app:layout_constraintVertical_bias="0.0"
                app:timeUnits="hhmm">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <android.widget.Button
                android:id="@+id/btnLogout"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{()->viewModel.logout()}"
...
